# fans-controller

./: .gitignore  CMakeLists.txt  README.md
core/: tuf_gaming_fx705ge.cpp  tuf_gaming_fx705ge.h
device-check/: asus_fan_report.sh  sensors_report.sh
inc/: main.h
src/: main.cpp
style/: mainwindow.css
ui/: mainwindow.cpp  mainwindow.h
